--- a/main.ipynb
+++ b/main.ipynb
@@ -79,6 +79,7 @@
         "import pandas as pd\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix, f1_score, precision_score, recall_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "import matplotlib.pyplot as plt\n",
@@ -86,6 +87,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "7a496c2a",
       "metadata": {},
@@ -383,32 +385,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "id": "5f17b2cd",
-      "metadata": {},
-      "source": [
-        "### 1.1 Pre-processamento dos dados\n",
-        "Utilização da técnica _Principal Component Analysis (PCA)_\n",
-        "\n",
-        "> Esta técnica visa reduzir a dimensão do conjunto de dados."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "id": "32a2c424",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# código PCA"
-      ]
-    },
-    {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "f60d9302",
       "metadata": {},
       "source": [
-        "### 1.2 Extração das features e da classe\n"
+        "### 1.1 Extração das features e da classe\n"
       ]
     },
     {
@@ -454,6 +436,29 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "id": "5f17b2cd",
+      "metadata": {},
+      "source": [
+        "### 1.2 Pre-processamento dos dados\n",
+        "Utilização da técnica _Principal Component Analysis (PCA)_\n",
+        "\n",
+        "> Esta técnica visa reduzir a dimensão do conjunto de dados."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "32a2c424",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# código PCA"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "afc0a2d6",
       "metadata": {},
@@ -469,10 +474,18 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+        "# scaler = StandardScaler()\n",
+        "# X_scaled = scaler.fit_transform(X)\n",
+        "\n",
+        "# pca = PCA(n_components=2)\n",
+        "# X_pca = pca.fit_transform(X_scaled)\n",
+        "# X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.3, random_state=42)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "\n"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "00faf00f",
       "metadata": {},
@@ -493,6 +506,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "16780632",
       "metadata": {},
@@ -533,6 +547,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "3e547864",
       "metadata": {},
@@ -568,6 +583,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "063434bb",
       "metadata": {},
@@ -589,6 +605,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "8ac0ab68",
       "metadata": {},
@@ -629,6 +646,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "dfd88961",
       "metadata": {},
@@ -653,6 +671,82 @@
           "output_type": "display_data"
         }
       ],
+      "source": [
+        "plt.figure(figsize=(6, 4))\n",
+        "sns.heatmap(cm_rf, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False)\n",
+        "\n",
+        "plt.title(\"Matriz de Confusão\", fontsize=14)\n",
+        "plt.xlabel(\"Previsto\")\n",
+        "plt.ylabel(\"Real\")\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "id": "077d0c8d",
+      "metadata": {},
+      "source": [
+        "## 4. Treino e teste do Gausian Naive Bayes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1ee56636",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nb = GaussianNB(n_estimators=100, random_state=42)\n",
+        "nb.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred = nb.predict(X_test)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "id": "35b0fba4",
+      "metadata": {},
+      "source": [
+        "### 4.1 Métricas de desempenho do Gausian Naive Bayes Forest"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fa6f4e4e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "accuracy_rf = accuracy_score(y_test, y_pred)\n",
+        "cm_rf = confusion_matrix(y_test, y_pred)\n",
+        "f1_rf = f1_score(y_test, y_pred, average='weighted')\n",
+        "precision_rf = precision_score(y_test, y_pred, average='weighted')\n",
+        "recall_rf = recall_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "print(f\"Accuracy of Gausian Naive Bayes: {accuracy_rf:.4f}\")\n",
+        "print(f\"F1 Score: {f1_rf:.4f}\")\n",
+        "print(f\"Precision Score: {precision_rf:.4f}\")\n",
+        "print(f\"Recall Score: {recall_rf:.4f}\")\n",
+        "print(f\"Error: {1 - accuracy_rf:.4f}\")"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "id": "76e2965e",
+      "metadata": {},
+      "source": [
+        "### 4.2 Matriz de confusão"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a7031198",
+      "metadata": {},
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(6, 4))\n",
         "sns.heatmap(cm_rf, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False)\n",
