--- a/main.ipynb
+++ b/main.ipynb
@@ -85,8 +85,8 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "from sklearn.svm import LinearSVC\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.decomposition import PCA"
+        "# from sklearn.preprocessing import StandardScaler\n",
+        "# from sklearn.decomposition import PCA"
       ]
     },
     {
@@ -458,11 +458,11 @@
       "outputs": [],
       "source": [
         "# código PCA\n",
-        "scaler = StandardScaler()\n",
-        "X_scaled = scaler.fit_transform(X)\n",
+        "# scaler = StandardScaler()\n",
+        "# X_scaled = scaler.fit_transform(X)\n",
         "\n",
-        "pca = PCA(n_components=2)\n",
-        "X_pca = pca.fit_transform(X_scaled)"
+        "# pca = PCA(n_components=2)\n",
+        "# X_pca = pca.fit_transform(X_scaled)"
       ]
     },
     {
@@ -482,8 +482,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.3, random_state=42)\n",
-        "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "# X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.3, random_state=42)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n"
       ]
     },
