--- a/main.ipynb
+++ b/main.ipynb
@@ -1230,10 +1230,10 @@
         }
       ],
       "source": [
-        "cm_nb = ConfusionMatrix(actual_vector=y_test,predict_vector=y_pred)\n",
+        "cm_svc = ConfusionMatrix(actual_vector=y_test,predict_vector=y_pred)\n",
         "\n",
-        "weighted_metrics_nb = get_weighted_metrics(cm_nb)\n",
-        "print_weighted_metrics(weighted_metrics_nb)"
+        "weighted_metrics_svc = get_weighted_metrics(cm_svc)\n",
+        "print_weighted_metrics(weighted_metrics_svc)"
       ]
     },
     {
