fix typo resolves #30

--- a/main.ipynb
+++ b/main.ipynb
@@ -917,7 +917,7 @@
       "id": "077d0c8d",
       "metadata": {},
       "source": [
-        "## 4. Treino e teste do Gausian Naive Bayes"
+        "## 4. Treino e teste do Gaussian Naive Bayes"
       ]
     },
     {
