docs: cite pycm and explain what's this package

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -224,7 +224,12 @@ predição e uso de memória de cada modelo.
 A base será dividida em porções
 diferentes para testes e o treinamento do modelo,
 sendo 70\% para treino e 30\% para testes
-conforme realizado no artigo \cite{Aissou2021}. 
+conforme realizado no artigo \cite{Aissou2021}.
+
+Para a avaliação do desempenho dos modelos
+será utilizada a biblioteca \textit{PyCM} do Python
+\cite{Haghighi2018}, que é uma biblioteca de matriz de confusão
+multiclasse, que implementa diversas métricas de classificação.
 
 \subsection{Pré-Processamento dos dados}
 
