--- a/article/references.bib
+++ b/article/references.bib
@@ -203,3 +203,16 @@ doi = {10.3390/drones7060370}}
   doi = {10.1007/s10994-006-6226-1},
   url = {http://link.springer.com/10.1007/s10994-006-6226-1},
   urldate = {2025-08-06}}
+
+@article{Haghighi2018,
+  doi = {10.21105/joss.00729},
+  url = {https://doi.org/10.21105/joss.00729},
+  year  = {2018},
+  publisher = {The Open Journal},
+  volume = {3},
+  number = {25},
+  pages = {729},
+  author = {Sepand Haghighi and Masoomeh Jasemi and Shaahin Hessabi and Alireza Zolanvari},
+  title = {{PyCM}: Multiclass confusion matrix library in Python},
+  journal = {Journal of Open Source Software}
+}
