--- a/article/references.bib
+++ b/article/references.bib
@@ -204,6 +204,26 @@ doi = {10.3390/drones7060370}}
   url = {http://link.springer.com/10.1007/s10994-006-6226-1},
   urldate = {2025-08-06}}
 
+@article{MCC,
+doi = {10.1371/journal.pone.0041882},
+author = {Jurman, Giuseppe AND Riccadonna, Samantha AND Furlanello,
+Cesare},
+journal = {PLOS ONE},
+publisher = {Public Library of Science},
+title = {A Comparison of MCC and CEN Error Measures in Multi-Class
+Prediction},
+year = {2012},
+volume = {7},
+url = {https://doi.org/10.1371/journal.pone.0041882},
+pages = {1-8},
+abstract = {We show that the Confusion Entropy, a measure of performance
+in multiclass problems has a strong (monotone) relation with the multiclass
+generalization of a classical metric, the Matthews Correlation Coefficient.
+Analytical results are provided for the limit cases of general no-information (n
+face dice rolling) of the binary classification. Computational evidence supports
+the claim in the general case.},
+number = {8}}
+
 @article{Haghighi2018,
   doi = {10.21105/joss.00729},
   url = {https://doi.org/10.21105/joss.00729},
