--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -213,23 +213,38 @@ para averiguar se o \textit{Extremely Randomized Trees}
 obtém um desempenho melhor que o \textit{Random Forest}.
 O algoritmo \textit{XGBoost}
 será mantido, pois obteve o melhor desempenho
-no artigo de \cite{Aissou2021}. Portanto ele será usado como base
+no artigo de \cite{Aissou2021}.
+Portanto ele será usado como base
 para comparação com os demais algoritmos.
+
+Para a avaliação do desempenho dos modelos
+será utilizada a biblioteca \textit{PyCM} do Python,
+que é uma biblioteca de matriz de confusão
+multiclasse, que implementa diversas métricas de classificação.
+\cite{Haghighi2018}
 
 Serão analisadas a acurácia,
 precisão e a quantidade de falsos negativos.
 Além disso, será feita a análise do tempo de treinamento,
-predição e uso de memória de cada modelo.
+predição e uso de memória de cada modelo,
+com o objetivo de identificar o mais viável
+para implementação em VANTs.
+
 \subsection{Divisão dos dados}
 A base será dividida em porções
 diferentes para testes e o treinamento do modelo,
 sendo 70\% para treino e 30\% para testes
-conforme realizado no artigo \cite{Aissou2021}.
+conforme realizado no artigo. \cite{Aissou2021}
 
-Para a avaliação do desempenho dos modelos
-será utilizada a biblioteca \textit{PyCM} do Python
-\cite{Haghighi2018}, que é uma biblioteca de matriz de confusão
-multiclasse, que implementa diversas métricas de classificação.
+\subsection{Matthews Correlation Coefficient (MCC)}
+O \textit{Matthews Correlation Coefficient} (MCC) é uma métrica
+de avaliação de modelos de classificação binária,
+que posteriormente foi extrapolada para classificação multiclasse. \cite{MCC}
+
+Neste trabalho será utilizado o MCC,
+juntamente com a acurácia para avaliar a eficácia
+dos modelos de aprendizado de máquina
+na detecção de ataques de \textit{spoofing} de GPS.
 
 \subsection{Pré-Processamento dos dados}
 
@@ -243,16 +258,18 @@ simplificando o processo de reconhecimento dos dados. Essa técnica é
 diferente da usada no artigo de \cite{Aissou2021}
 que se chama \textit{Spearman Correlation Coefficient}.
 
-
 \subsection{Análise do desempenho}
 Para análisar a eficácia do algoritmo através dos dados disponíveis é 
 necessário avaliar os comportamentos dos modelos e para isso 
-serão utilizadas as seguintes métricas: (i) acurácia, erro, precisão, 
-sensibilidade (recall) e F1 score para desempenho.
-
-\begin{comment}
-  Adicionar aqui as métricas utilizadas vai usar validação cruzada mesmo?
-\end{comment}
+serão utilizadas as seguintes métricas:
+(\romannumeral 1) probabilidade de detecção,
+(\romannumeral 2) acurácia,
+(\romannumeral 3) probabilidade de detecção falsa,
+(\romannumeral 4) probabilidade de alarme falso,
+(\romannumeral 5) taxa de erro,
+(\romannumeral 6) coeficiente MCC,
+(\romannumeral 7) F1 score,
+(\romannumeral 8) especificidade.
 
 \section{Resultados e discussões}
 
