erro de portugues

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -258,7 +258,7 @@ melhorar o desempenho do processamento e o
 \textit{Random Under Sampler} para reduzir o desbalanceamento das classes
 que dificultam o treinamento e a análise dos dados.
 
-Os motivos pelos quais foram escolhidos esses métodos está embasado nos seguintes artigos: 
+Os motivos pelos quais foram escolhidos esses métodos estão embasados nos seguintes artigos: 
 \begin{itemize}
   \item \textbf{PCA:} Nessa pesquisa de \cite {Zhang2019MachineLW} 
     foi utilizada para detectar \textit{malwares}
