correção do texto

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -320,12 +320,14 @@ serão utilizadas as seguintes métricas:
 
 Com base nos dados da Tabela 1 podemos avaliar o desempenho dos algoritmos utilizados 
 para classificar ataques de \textit{spoofing} aos VANTS.
+\subsection{Probabilidade de detecção}
 \subsection{Acurácia}
-\subsection{Precisão}
-\subsection{Erro}
-\subsection{Recall}
-\subsection{F1 Score}
-
+\subsection{Probabilidade de detecção falsa}
+\subsection{Probabilidade de alarme falso}
+\subsection{Taxa de erro}
+\subsection{Coeficiente MCC}
+\subsection{F1 score}
+\subsection{Especificidade}
 
 \section{Conclusão}
 \printbibliography
