--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -252,25 +252,12 @@ Será aplicada a técnica de pré processamento
 \textit{Principal Component Analysis} (PCA) para melhorar
 a precisão dos resultados finais. Ela consiste em reduzir a
 dimensão do dataset para deixar apenas as informações mais relevantes,
-removendo assim as redundâncias \cite{IBM02025}. Assim como serão utilizadas
+removendo assim as redundâncias \cite {Zhang2019MachineLW}. 
+Assim como serão utilizadas
 outras duas técnicas adicionais conhecidas como \textit{Standard Scaler} para
-melhorar o desempenho do processamento e o
+melhorar o desempenho do processamento \cite {DEAMORIM2023109924} e o
 \textit{Random Under Sampler} para reduzir o desbalanceamento das classes
-que dificultam o treinamento e a análise dos dados.
-
-Os motivos pelos quais foram escolhidos esses métodos estão embasados nos seguintes artigos: 
-\begin{itemize}
-  \item \textbf{PCA:} Nessa pesquisa de \cite {Zhang2019MachineLW} 
-    foi utilizada para detectar \textit{malwares}
-    e constatou a remoção de redundâncias dos dados com perda mínima.
-  \item \textbf{Standard Scaler:} Nesse artigo  de \cite {DEAMORIM2023109924} 
-    a técnica foi empregada para verificar 
-    a performance dos algoritmos de classificação e provou ser eficaz.
-  \item \textbf{Random Under Sampler:} Nesse artigo de \cite {DEAMORIM2023109924} 
-    desempenhou papel crucial para a detecção de intrusão em \textit{smartphones}, 
-    pois o modelo é bem empregado quando há dados desbalanceados.
-\end{itemize}
-
+que dificultam o treinamento e a análise dos dados \cite {DEAMORIM2023109924}.
 Essas técnicas são
 diferentes da usada no artigo de \cite{Aissou2021}
 que se chama \textit{Spearman Correlation Coefficient}.
