correçao para citacoes originais dos artigos

--- a/article/references.bib
+++ b/article/references.bib
@@ -274,3 +274,22 @@ doi = {10.3390/drones7060370}}
   title = {{PyCM}: Multiclass confusion matrix library in Python},
   journal = {Journal of Open Source Software}
 }
+
+@article{pearson1901,
+  author    = {Karl Pearson},
+  title     = {On Lines and Planes of Closest Fit to Systems of Points in Space},
+  journal   = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume    = {2},
+  number    = {11},
+  pages     = {559--572},
+  year      = {1901},
+  doi       = {10.1080/14786440109462720}
+}
+
+@inproceedings{japkowicz2000,
+  author    = {Nathalie Japkowicz},
+  title     = {Learning from Imbalanced Data Sets},
+  booktitle = {Proceedings of the AAAI Workshop on Learning from Imbalanced Data Sets},
+  year      = {2000},
+  publisher = {AAAI Press}
+}
