--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -255,9 +255,10 @@ dimensão do dataset para deixar apenas as informações mais relevantes,
 removendo assim as redundâncias \cite {Zhang2019MachineLW}. 
 Assim como serão utilizadas
 outras duas técnicas adicionais conhecidas como \textit{Standard Scaler} para
-melhorar o desempenho do processamento \cite {DEAMORIM2023109924} e o
+melhorar o desempenho do processamento \cite {pearson1901} e o
 \textit{Random Under Sampler} para reduzir o desbalanceamento das classes
-que dificultam o treinamento e a análise dos dados \cite {DEAMORIM2023109924}.
+que dificultam o treinamento e a análise dos dados \cite {japkowicz2000}.
+
 Essas técnicas são
 diferentes da usada no artigo de \cite{Aissou2021}
 que se chama \textit{Spearman Correlation Coefficient}.
