--- a/article/references.bib
+++ b/article/references.bib
@@ -364,3 +364,14 @@ doi = {10.3390/drones7060370}}
   booktitle = {Proceedings of the AAAI Workshop on Learning from Imbalanced Data Sets},
   year      = {2000},
   publisher = {AAAI Press}}
+
+@article{pearson1894,
+  author    = {Karl Pearson},
+  title     = {Contributions to the Mathematical Theory of Evolution},
+  journal   = {Philosophical Transactions of the Royal Society of London. A},
+  volume    = {185},
+  pages     = {71--110},
+  year      = {1894},
+  doi       = {10.1098/rsta.1894.0003},
+  publisher = {Royal Society}
+}
