--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -252,10 +252,15 @@ Será aplicada a técnica de pré processamento
 \textit{Principal Component Analysis} (PCA) para melhorar
 a precisão dos resultados finais. Ela consiste em reduzir a
 dimensão do dataset para deixar apenas as informações mais relevantes,
-removendo assim as redundâncias \cite{IBM02025}. 
-Esse tipo de processamento ajuda algoritmos de aprendizagem de máquina,
-simplificando o processo de reconhecimento dos dados. Essa técnica é
-diferente da usada no artigo de \cite{Aissou2021}
+removendo assim as redundâncias \cite {pearson1901}. 
+Assim como serão utilizadas
+outras duas técnicas adicionais conhecidas como \textit{Standard Scaler} para
+melhorar o desempenho do processamento \cite {pearson1894} e o
+\textit{Random Under Sampler} para reduzir o desbalanceamento das classes
+que dificultam o treinamento e a análise dos dados \cite {japkowicz2000}.
+
+Essas técnicas são
+diferentes da usada no artigo de \cite{Aissou2021}
 que se chama \textit{Spearman Correlation Coefficient}.
 
 \subsection{Análise do desempenho}
@@ -273,42 +278,44 @@ serão utilizadas as seguintes métricas:
 
 \section{Resultados e discussões}
 
-\begin{table}
-  \caption{Análise de desempenho}
-  \resizebox{\textwidth}{!}{%
-    \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
-      \hline                             
-      Métrica                               & Random Forest   &     KNN       &  Gausian Naive Bayes       &    SVM     & Extremely Randomized Trees   & XGBoost \\
-      \hline
-      Probabilidade de detecção             & 90.8\%          &    73.3\%    &    46.2\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-      \hline  
-      Acurácia                              & 93.5\%          &    79.0\%    &    58.3\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-      \hline  
-      Probabilidade de detecção falsa       & 9.2\%           &    26.7\%    &    53.8\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-      \hline  
-      Probabilidade de alarme falso         & 1.6\%           &    5.40\%    &    26.5\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-      \hline  
-      Taxa de Erro                          & 6.5\%           &    21.00\%   &    41.7\%                   &   0.462\%  &   0.462\%                    &   0.462\%  \\
-      \hline  
-      Coefiente MCC                         & 0.812           &    0.552      &   0.160                    &   0.462    &   0.462                      &   0.462  \\
-      \hline             
-      F1-Score                              & 0.914           &    0.762      &   0.527                    &   0.462    &   0.462                      &   0.462 \\
-      \hline             
-      Especificidade                        & 0.984           &    0.946      &   0.736                    &   0.462    &   0.462                      &   0.462 \\
-      \hline
+% \begin{table}
+%   \caption{Análise de desempenho}
+%   \resizebox{\textwidth}{!}{%
+%     \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
+%       \hline                             
+%       Métrica                               & Random Forest   &     KNN       &  Gausian Naive Bayes       &    SVM     & Extremely Randomized Trees   & XGBoost \\
+%       \hline
+%       Probabilidade de detecção             & 90.8\%          &    73.3\%    &    46.2\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
+%       \hline  
+%       Acurácia                              & 93.5\%          &    79.0\%    &    58.3\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
+%       \hline  
+%       Probabilidade de detecção falsa       & 9.2\%           &    26.7\%    &    53.8\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
+%       \hline  
+%       Probabilidade de alarme falso         & 1.6\%           &    5.40\%    &    26.5\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
+%       \hline  
+%       Taxa de Erro                          & 6.5\%           &    21.00\%   &    41.7\%                   &   0.462\%  &   0.462\%                    &   0.462\%  \\
+%       \hline  
+%       Coefiente MCC                         & 0.812           &    0.552      &   0.160                    &   0.462    &   0.462                      &   0.462  \\
+%       \hline             
+%       F1-Score                              & 0.914           &    0.762      &   0.527                    &   0.462    &   0.462                      &   0.462 \\
+%       \hline             
+%       Especificidade                        & 0.984           &    0.946      &   0.736                    &   0.462    &   0.462                      &   0.462 \\
+%       \hline
 
-    \end{tabular}
-  }
-\end{table}
+%     \end{tabular}
+%   }
+% \end{table}
 
 Com base nos dados da Tabela 1 podemos avaliar o desempenho dos algoritmos utilizados 
 para classificar ataques de \textit{spoofing} aos VANTS.
+\subsection{Probabilidade de detecção}
 \subsection{Acurácia}
-\subsection{Precisão}
-\subsection{Erro}
-\subsection{Recall}
-\subsection{F1 Score}
-
+\subsection{Probabilidade de detecção falsa}
+\subsection{Probabilidade de alarme falso}
+\subsection{Taxa de erro}
+\subsection{Coeficiente MCC}
+\subsection{F1 score}
+\subsection{Especificidade}
 
 \section{Conclusão}
 \printbibliography
