--- a/article/references.bib
+++ b/article/references.bib
@@ -204,25 +204,63 @@ doi = {10.3390/drones7060370}}
   url = {http://link.springer.com/10.1007/s10994-006-6226-1},
   urldate = {2025-08-06}}
 
+@article{Zhang2019MachineLW,
+  title={Machine Learning With Feature Selection Using Principal Component Analysis for Malware Detection: A Case Study},
+  author={Jason Y. Zhang},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1902.03639},
+  url={https://api.semanticscholar.org/CorpusID:60440676}
+}
+
+@article{DEAMORIM2023109924,
+  title = {The choice of scaling technique matters for classification performance},
+  journal = {Applied Soft Computing},
+  volume = {133},
+  pages = {109924},
+  year = {2023},
+  issn = {1568-4946},
+  doi = {https://doi.org/10.1016/j.asoc.2022.109924},
+  url = {https://www.sciencedirect.com/science/article/pii/S1568494622009735},
+  author = {Lucas B.V. {de Amorim} and George D.C. Cavalcanti and Rafael M.O. Cruz},
+  keywords = {Classification, Normalization, Standardization, Scaling, Preprocessing, Ensemble of classifiers, Multiple Classifier System},
+  abstract = {Dataset scaling, also known as normalization, is an essential preprocessing step in a machine learning pipeline. It is aimed at adjusting attributes scales in a way that they all vary within the same range. This transformation is known to improve the performance of classification models, but there are several scaling techniques to choose from, and this choice is not generally done carefully. In this paper, we execute a broad experiment comparing the impact of 5 scaling techniques on the performances of 20 classification algorithms among monolithic and ensemble models, applying them to 82 publicly available datasets with varying imbalance ratios. Results show that the choice of scaling technique matters for classification performance, and the performance difference between the best and the worst scaling technique is relevant and statistically significant in most cases. They also indicate that choosing an inadequate technique can be more detrimental to classification performance than not scaling the data at all. We also show how the performance variation of an ensemble model, considering different scaling techniques, tends to be dictated by that of its base model. Finally, we discuss the relationship between a model’s sensitivity to the choice of scaling technique and its performance and provide insights into its applicability on different model deployment scenarios. Full results and source code for the experiments in this paper are available in a GitHub repository.11https://github.com/amorimlb/scaling_matters.}
+}
+
+@Article{electronics13101878,
+  AUTHOR = {Fan, Zongwen and Sohail, Shaleeza and Sabrina, Fariza and Gu, Xin},
+  TITLE = {Sampling-Based Machine Learning Models for Intrusion Detection in Imbalanced Dataset},
+  JOURNAL = {Electronics},
+  VOLUME = {13},
+  YEAR = {2024},
+  NUMBER = {10},
+  ARTICLE-NUMBER = {1878},
+  URL = {https://www.mdpi.com/2079-9292/13/10/1878},
+  ISSN = {2079-9292},
+  ABSTRACT = {Cybersecurity is one of the important considerations when adopting IoT devices in smart applications. Even though a huge volume of data is available, data related to attacks are generally in a significantly smaller proportion. Although machine learning models have been successfully applied for detecting security attacks on smart applications, their performance is affected by the problem of such data imbalance. In this case, the prediction model is preferable to the majority class, while the performance for predicting the minority class is poor. To address such problems, we apply two oversampling techniques and two undersampling techniques to balance the data in different categories. To verify their performance, five machine learning models, namely the decision tree, multi-layer perception, random forest, XGBoost, and CatBoost, are used in the experiments based on the grid search with 10-fold cross-validation for parameter tuning. The results show that both the oversampling and undersampling techniques can improve the performance of the prediction models used. Based on the results, the XGBoost model based on the SMOTE has the best performance in terms of accuracy at 75%, weighted average precision at 82%, weighted average recall at 75%, weighted average F1 score at 78%, and Matthews correlation coefficient at 72%. This indicates that this oversampling technique is effective for multi-attack prediction under a data imbalance scenario.},
+  DOI = {10.3390/electronics13101878}
+}
+
 @article{MCC,
-doi = {10.1371/journal.pone.0041882},
-author = {Jurman, Giuseppe AND Riccadonna, Samantha AND Furlanello,
-Cesare},
-journal = {PLOS ONE},
-publisher = {Public Library of Science},
-title = {A Comparison of MCC and CEN Error Measures in Multi-Class
-Prediction},
-year = {2012},
-volume = {7},
-url = {https://doi.org/10.1371/journal.pone.0041882},
-pages = {1-8},
-abstract = {We show that the Confusion Entropy, a measure of performance
-in multiclass problems has a strong (monotone) relation with the multiclass
-generalization of a classical metric, the Matthews Correlation Coefficient.
-Analytical results are provided for the limit cases of general no-information (n
-face dice rolling) of the binary classification. Computational evidence supports
-the claim in the general case.},
-number = {8}}
+  doi = {10.1371/journal.pone.0041882},
+  author = {Jurman, Giuseppe AND Riccadonna, Samantha AND Furlanello,
+  Cesare},
+  journal = {PLOS ONE},
+  publisher = {Public Library of Science},
+  title = {A Comparison of MCC and CEN Error Measures in Multi-Class
+  Prediction},
+  year = {2012},
+  volume = {7},
+  url = {https://doi.org/10.1371/journal.pone.0041882},
+  pages = {1-8},
+  abstract = {We show that the Confusion Entropy, a measure of performance
+  in multiclass problems has a strong (monotone) relation with the multiclass
+  generalization of a classical metric, the Matthews Correlation Coefficient.
+  Analytical results are provided for the limit cases of general no-information (n
+  face dice rolling) of the binary classification. Computational evidence supports
+  the claim in the general case.},
+  number = {8}
+}
 
 @article{Haghighi2018,
   doi = {10.21105/joss.00729},
@@ -235,4 +273,33 @@ number = {8}}
   author = {Sepand Haghighi and Masoomeh Jasemi and Shaahin Hessabi and Alireza Zolanvari},
   title = {{PyCM}: Multiclass confusion matrix library in Python},
   journal = {Journal of Open Source Software}
+}
+
+@article{pearson1901,
+  author    = {Karl Pearson},
+  title     = {On Lines and Planes of Closest Fit to Systems of Points in Space},
+  journal   = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume    = {2},
+  number    = {11},
+  pages     = {559--572},
+  year      = {1901},
+  doi       = {10.1080/14786440109462720}
+}
+
+@inproceedings{japkowicz2000,
+  author    = {Nathalie Japkowicz},
+  title     = {Learning from Imbalanced Data Sets},
+  booktitle = {Proceedings of the AAAI Workshop on Learning from Imbalanced Data Sets},
+  year      = {2000},
+  publisher = {AAAI Press}
+}
+@article{pearson1894,
+  author    = {Karl Pearson},
+  title     = {Contributions to the Mathematical Theory of Evolution},
+  journal   = {Philosophical Transactions of the Royal Society of London. A},
+  volume    = {185},
+  pages     = {71--110},
+  year      = {1894},
+  doi       = {10.1098/rsta.1894.0003},
+  publisher = {Royal Society}
 }
