--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -9,6 +9,7 @@
 \usepackage{lipsum}
 \usepackage{csquotes}
 \usepackage{url}
+\usepackage{placeins}
 \usepackage[
     style=authoryear,
     citestyle=authoryear,
@@ -106,8 +107,6 @@ Tais abordagens oferecem uma resposta robusta e adaptativa
 a essas ameaças contribuindo para as operações dos VANTs
 \cite{isleyenGPSSpoofingDetection2024}.
 
-
-
 Neste trabalho será feita a reimplementação dos algoritmos
 \textit{RandomForest} e \textit{XGBoost} e seus respectivos 
 experimentos do artigo \cite{Aissou2021}, com o objetivo de comparar
@@ -190,8 +189,8 @@ que implementou os algoritmos baseados em árvore:
 Será realizada a reimplementação dos algoritmos
 (i) \textit{Random Forest} e (ii) \textit{XGBoost},
 ambos obtiveram o pior e melhor desempenho,
-respectivamente, ponderando as métricas de tempo de execução e uso de memória,
-no comparativo dos modelos baseados em árvore.
+respectivamente, ponderando as métricas de tempo de execução
+e uso de memória, no comparativo dos modelos baseados em árvore.
 Ambos algoritmos serão comparados com outros
 modelos que não são baseados em árvore,
 sendo eles: (iii) SVM, (iv) \textit{K-NN} e
@@ -278,33 +277,58 @@ serão utilizadas as seguintes métricas:
 
 \section{Resultados e discussões}
 
-% \begin{table}
-%   \caption{Análise de desempenho}
-%   \resizebox{\textwidth}{!}{%
-%     \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
-%       \hline                             
-%       Métrica                               & Random Forest   &     KNN       &  Gausian Naive Bayes       &    SVM     & Extremely Randomized Trees   & XGBoost \\
-%       \hline
-%       Probabilidade de detecção             & 90.8\%          &    73.3\%    &    46.2\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-%       \hline  
-%       Acurácia                              & 93.5\%          &    79.0\%    &    58.3\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-%       \hline  
-%       Probabilidade de detecção falsa       & 9.2\%           &    26.7\%    &    53.8\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-%       \hline  
-%       Probabilidade de alarme falso         & 1.6\%           &    5.40\%    &    26.5\%                   &   0.462\%  &   0.462\%                    &   0.462\% \\
-%       \hline  
-%       Taxa de Erro                          & 6.5\%           &    21.00\%   &    41.7\%                   &   0.462\%  &   0.462\%                    &   0.462\%  \\
-%       \hline  
-%       Coefiente MCC                         & 0.812           &    0.552      &   0.160                    &   0.462    &   0.462                      &   0.462  \\
-%       \hline             
-%       F1-Score                              & 0.914           &    0.762      &   0.527                    &   0.462    &   0.462                      &   0.462 \\
-%       \hline             
-%       Especificidade                        & 0.984           &    0.946      &   0.736                    &   0.462    &   0.462                      &   0.462 \\
-%       \hline
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=1\linewidth]{../plot_accuracy_and_tpr.pdf}
+  \caption{Gráfico de probabilidade de detecção e acurácia.}
+\end{figure}
 
-%     \end{tabular}
-%   }
-% \end{table}
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\linewidth]{../plot_pmd_and_pfa.pdf}
+    \caption{Gráfico de probabilidade de detecção falsa e probabilidade de alarme falso.}
+\end{figure}
+
+\begin{table}
+  \caption{Métricas de performance dos modelos}
+  \resizebox{\textwidth}{!}{%
+    \begin{tabular}{|l|l|l|l|l|}
+      \hline
+      Algoritmo & Tempo de treinamento & Uso de memória (treinamento) & Tempo de predição & Uso de memória (predição) \\
+      \hline
+      Gaussian Naive Bayes & 209.44 ms & 8.92 MiB & 48.67 ms & 33.95 MiB \\
+      KNN & 335.34 ms & 4.18 MiB & 9129.37 ms & 25.39 MiB \\
+      SVM & 772.69 ms & 1.45 MiB & 15.19 ms & 9.41 MiB \\
+      Extremely Randomized Trees & 6180.53 ms & 10.12 MiB & 2237.85 ms & 18.13 MiB \\
+      Random Forest & 43128.56 ms & 11.84 MiB & 1475.68 ms & 18.13 MiB \\
+      Xtreme Gradient Boosting & 229203.56 ms & 18.13 MiB & 793.14 ms & 23.96 MiB \\
+      \hline
+    \end{tabular}
+  }
+\end{table}
+
+\begin{table}
+  \caption{Métricas de desempenho}
+  \resizebox{\textwidth}{!}{%
+    \begin{tabular}{|l|l|l|l|l|l|l|l|}
+      \hline
+      Métrica & Random Forest & Extremely Randomized Trees & XGBoost  & KNN & Gaussian Naive Bayes & SVM \\
+      \hline
+      Probabilidade de detecção & 90.76\% & 89.71\% & 74.31\% & 73.32\% & 46.21\% & 37.68\% \\
+      Acurácia & 93.51\% & 92.65\% & 79.29\% & 78.96\% & 58.31\% & 53.25\% \\
+      Probabilidade de detecção falsa & 9.24\% & 10.29\% & 25.69\% & 26.68\% & 53.79\% & 62.32\% \\
+      Probabilidade de alarme falso & 1.63\% & 1.74\% & 3.79\% & 5.37\% & 26.45\% & 15.95\% \\
+      Taxa de Erro & 6.49\% & 7.35\% & 20.71\% & 21.04\% & 41.69\% & 46.75\% \\
+      Coeficiente MCC & 0.81 & 0.79 & 0.57 & 0.55 & 0.16 & 0.18 \\
+      F1-Score & 0.91 & 0.90 & 0.77 & 0.76 & 0.53 & 0.45 \\
+      Especificidade & 0.98 & 0.98 & 0.96 & 0.95 & 0.74 & 0.84\\
+      \hline
+    \end{tabular}
+    }
+\end{table}
+
+
+\FloatBarrier
 
 Com base nos dados da Tabela 1 podemos avaliar o desempenho dos algoritmos utilizados 
 para classificar ataques de \textit{spoofing} aos VANTS.
@@ -318,6 +342,7 @@ para classificar ataques de \textit{spoofing} aos VANTS.
 \subsection{Especificidade}
 
 \section{Conclusão}
+
 \printbibliography
 
 \end{document}
